// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DotSteps renders correctly 1`] = `
<DocumentFragment>
  .cache-19uorb5-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-19uorb5-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(2)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-0px);
  -moz-transform: translateX(-0px);
  -ms-transform: translateX(-0px);
  transform: translateX(-0px);
}

.cache-19uorb5-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(1)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-26px);
  -moz-transform: translateX(-26px);
  -ms-transform: translateX(-26px);
  transform: translateX(-26px);
}

.cache-m08vxu-StyledDot-DotStep {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  margin: 8px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
}

.cache-m08vxu-StyledDot-DotStep::before,
.cache-m08vxu-StyledDot-DotStep::after {
  content: '';
  position: absolute;
  border-radius: inherit;
  top: 50%;
  left: 50%;
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.cache-m08vxu-StyledDot-DotStep::before {
  width: 10px;
  height: 10px;
  margin: -5px;
  background-color: #4f0599;
}

.cache-m08vxu-StyledDot-DotStep::after {
  width: 20px;
  height: 20px;
  margin: -10px;
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='true']::before {
  -webkit-transform: scale(0.5);
  -moz-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='false']:hover::before {
  -webkit-transform: scale(1.6);
  -moz-transform: scale(1.6);
  -ms-transform: scale(1.6);
  transform: scale(1.6);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='false']:last-child::after {
  pointer-events: none;
}

.cache-m08vxu-StyledDot-DotStep:last-child::after {
  border: 1px solid #4f0599;
}

<div
    class="e1cog6k70 cache-19uorb5-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition e1l6meh00"
  >
    <div
      aria-selected="true"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly useState function 1`] = `
<DocumentFragment>
  .cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(10)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-0px);
  -moz-transform: translateX(-0px);
  -ms-transform: translateX(-0px);
  transform: translateX(-0px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(9)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-26px);
  -moz-transform: translateX(-26px);
  -ms-transform: translateX(-26px);
  transform: translateX(-26px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(8)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-52px);
  -moz-transform: translateX(-52px);
  -ms-transform: translateX(-52px);
  transform: translateX(-52px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(7)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-78px);
  -moz-transform: translateX(-78px);
  -ms-transform: translateX(-78px);
  transform: translateX(-78px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(6)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-104px);
  -moz-transform: translateX(-104px);
  -ms-transform: translateX(-104px);
  transform: translateX(-104px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(5)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-130px);
  -moz-transform: translateX(-130px);
  -ms-transform: translateX(-130px);
  transform: translateX(-130px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(4)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-156px);
  -moz-transform: translateX(-156px);
  -ms-transform: translateX(-156px);
  transform: translateX(-156px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(3)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-182px);
  -moz-transform: translateX(-182px);
  -ms-transform: translateX(-182px);
  transform: translateX(-182px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(2)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-208px);
  -moz-transform: translateX(-208px);
  -ms-transform: translateX(-208px);
  transform: translateX(-208px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(1)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-234px);
  -moz-transform: translateX(-234px);
  -ms-transform: translateX(-234px);
  transform: translateX(-234px);
}

.cache-m08vxu-StyledDot-DotStep {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  margin: 8px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
}

.cache-m08vxu-StyledDot-DotStep::before,
.cache-m08vxu-StyledDot-DotStep::after {
  content: '';
  position: absolute;
  border-radius: inherit;
  top: 50%;
  left: 50%;
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.cache-m08vxu-StyledDot-DotStep::before {
  width: 10px;
  height: 10px;
  margin: -5px;
  background-color: #4f0599;
}

.cache-m08vxu-StyledDot-DotStep::after {
  width: 20px;
  height: 20px;
  margin: -10px;
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='true']::before {
  -webkit-transform: scale(0.5);
  -moz-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='false']:hover::before {
  -webkit-transform: scale(1.6);
  -moz-transform: scale(1.6);
  -ms-transform: scale(1.6);
  transform: scale(1.6);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='false']:last-child::after {
  pointer-events: none;
}

.cache-m08vxu-StyledDot-DotStep:last-child::after {
  border: 1px solid #4f0599;
}

<div
    class="e1cog6k70 cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition e1l6meh00"
  >
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="true"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps renders correctly wit 10 steps, default step=4 1`] = `
<DocumentFragment>
  .cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(10)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-0px);
  -moz-transform: translateX(-0px);
  -ms-transform: translateX(-0px);
  transform: translateX(-0px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(9)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-26px);
  -moz-transform: translateX(-26px);
  -ms-transform: translateX(-26px);
  transform: translateX(-26px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(8)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-52px);
  -moz-transform: translateX(-52px);
  -ms-transform: translateX(-52px);
  transform: translateX(-52px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(7)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-78px);
  -moz-transform: translateX(-78px);
  -ms-transform: translateX(-78px);
  transform: translateX(-78px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(6)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-104px);
  -moz-transform: translateX(-104px);
  -ms-transform: translateX(-104px);
  transform: translateX(-104px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(5)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-130px);
  -moz-transform: translateX(-130px);
  -ms-transform: translateX(-130px);
  transform: translateX(-130px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(4)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-156px);
  -moz-transform: translateX(-156px);
  -ms-transform: translateX(-156px);
  transform: translateX(-156px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(3)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-182px);
  -moz-transform: translateX(-182px);
  -ms-transform: translateX(-182px);
  transform: translateX(-182px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(2)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-208px);
  -moz-transform: translateX(-208px);
  -ms-transform: translateX(-208px);
  transform: translateX(-208px);
}

.cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(1)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-234px);
  -moz-transform: translateX(-234px);
  -ms-transform: translateX(-234px);
  transform: translateX(-234px);
}

.cache-m08vxu-StyledDot-DotStep {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  margin: 8px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
}

.cache-m08vxu-StyledDot-DotStep::before,
.cache-m08vxu-StyledDot-DotStep::after {
  content: '';
  position: absolute;
  border-radius: inherit;
  top: 50%;
  left: 50%;
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.cache-m08vxu-StyledDot-DotStep::before {
  width: 10px;
  height: 10px;
  margin: -5px;
  background-color: #4f0599;
}

.cache-m08vxu-StyledDot-DotStep::after {
  width: 20px;
  height: 20px;
  margin: -10px;
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='true']::before {
  -webkit-transform: scale(0.5);
  -moz-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='false']:hover::before {
  -webkit-transform: scale(1.6);
  -moz-transform: scale(1.6);
  -ms-transform: scale(1.6);
  transform: scale(1.6);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='false']:last-child::after {
  pointer-events: none;
}

.cache-m08vxu-StyledDot-DotStep:last-child::after {
  border: 1px solid #4f0599;
}

<div
    class="e1cog6k70 cache-dxdh19-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition-selectedStepPosition e1l6meh00"
  >
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="true"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
  </div>
</DocumentFragment>
`;

exports[`DotSteps triggers onclick 1`] = `
<DocumentFragment>
  .cache-19uorb5-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.cache-19uorb5-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(2)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-0px);
  -moz-transform: translateX(-0px);
  -ms-transform: translateX(-0px);
  transform: translateX(-0px);
}

.cache-19uorb5-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition .e1cog6k71:nth-of-type(1)[aria-selected='true']~.e1cog6k71:last-child:after {
  -webkit-transform: translateX(-26px);
  -moz-transform: translateX(-26px);
  -ms-transform: translateX(-26px);
  transform: translateX(-26px);
}

.cache-m08vxu-StyledDot-DotStep {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #4f0599;
  margin: 8px;
  cursor: pointer;
  position: relative;
  background-color: transparent;
}

.cache-m08vxu-StyledDot-DotStep::before,
.cache-m08vxu-StyledDot-DotStep::after {
  content: '';
  position: absolute;
  border-radius: inherit;
  top: 50%;
  left: 50%;
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.cache-m08vxu-StyledDot-DotStep::before {
  width: 10px;
  height: 10px;
  margin: -5px;
  background-color: #4f0599;
}

.cache-m08vxu-StyledDot-DotStep::after {
  width: 20px;
  height: 20px;
  margin: -10px;
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='true']::before {
  -webkit-transform: scale(0.5);
  -moz-transform: scale(0.5);
  -ms-transform: scale(0.5);
  transform: scale(0.5);
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='false']:hover::before {
  -webkit-transform: scale(1.6);
  -moz-transform: scale(1.6);
  -ms-transform: scale(1.6);
  transform: scale(1.6);
  -webkit-transition: -webkit-transform 0.2s;
  transition: transform 0.2s;
}

.cache-m08vxu-StyledDot-DotStep[aria-selected='false']:last-child::after {
  pointer-events: none;
}

.cache-m08vxu-StyledDot-DotStep:last-child::after {
  border: 1px solid #4f0599;
}

<div
    class="e1cog6k70 cache-19uorb5-Child-StyledFlexBox-DotWrapper-selectedStepPosition-selectedStepPosition e1l6meh00"
  >
    <div
      aria-selected="true"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
    <div
      aria-selected="false"
      class="e1cog6k71 e6t57f80 cache-m08vxu-StyledDot-DotStep"
    />
  </div>
</DocumentFragment>
`;
